Correct alignemt on arc

--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -36,9 +36,8 @@
         } @else if $i == 5 {
           transform: rotate(315deg) translate($circle-size);
         } @else {
-          transform: rotate($rot * 1deg)
-            translate($circle-size)
-            rotate($rot * -(1deg));
+          transform: rotate($rot * 1deg) translate($circle-size);
+          // rotate($rot * -(1deg));
         }
       }
       $rot: $rot + $angle;
